--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,8 +67,12 @@ jobs:
         run: yarn build
 
       - name: Publish to npm
-        if: ${{ secrets.NPM_TOKEN != '' }}
-        run: yarn npm publish --access public
+        run: |
+          if [ -n "$NPM_TOKEN" ]; then
+            yarn npm publish --access public
+          else
+            echo "NPM_TOKEN not set, skipping publish"
+          fi
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
