--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zentla/sdk",
+  "name": "@hexrift/zentla-sdk",
   "version": "0.2.0",
   "description": "Official TypeScript SDK for Zentla - subscription management API",
   "author": "hexrift",
