feat: add usage metering and promotions, update branding
- Add zentla.usage.* methods for usage-based billing
  - ingest, ingestBatch, listEvents, getSummary, getCurrentPeriodUsage
  - createMetric, listMetrics
- Add zentla.promotions.* methods for discount codes
  - create, get, list, update, archive
  - createVersion, publish, validate, getUsage
- Update branding to match new Zentla messaging
  - Description: 'open source entitlements, metering, and billing'
  - Add metering-focused keywords
- Update README with usage metering and promotions examples

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hexrift/zentla-sdk",
   "version": "1.0.0",
-  "description": "Official TypeScript SDK for Zentla - subscription management API",
+  "description": "Official TypeScript SDK for Zentla — open source entitlements, metering, and billing",
   "author": "hexrift",
   "license": "MIT",
   "repository": {
@@ -14,9 +14,14 @@
   },
   "keywords": [
     "zentla",
-    "subscription",
     "billing",
+    "entitlements",
+    "metering",
+    "usage-based-billing",
+    "subscription",
     "saas",
+    "stripe",
+    "zuora",
     "api",
     "sdk",
     "typescript"
